@@ -1,4 +1,7 @@
 release 1.12
+- Fixed issue 898
+  http://java.net/jira/browse/JERSEY-898
+  Added missing null checks to ContainerRequest.evaluatePreconditions(Date | EntityTag)
 - Fixed issue 876
   http://java.net/jira/browse/JERSEY-876
   Adapted to recent change in Grizzly 1.x API.
